--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,16 @@
 [DEFAULT]
 AccessType = OnPremise
 SignOfLifeLog = 1
-CustomName = Shelly Pro 3EM
-DeviceInstance = 40
+CustomName = HuaweiPV
+DeviceInstance = 41
 # Role Could be pvinverter or grid
-Role = grid
+Role = pvinverter
 # Available Postions: 0 = AC, 1 = AC-Out 1, AC-Out 2
 Position = 0
 # Available values see https://docs.python.org/3/library/logging.html#levels
 LogLevel=ERROR
 
 [ONPREMISE]
-Host=192.168.2.13
+Host=192.168.178.160
 Username=
 Password=
